config: Update Nexus and pom.xml URLs to local machine IP 10.106.39.71

--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,14 @@
 
 	</dependencies>
 
+	<distributionManagement>
+		<repository>
+			<id>deploymentRepo</id>
+			<name>Nexus Repository</name>
+			<url>http://10.106.39.71:8081/repository/maven-releases/</url>
+		</repository>
+	</distributionManagement>
+
 	<build>
 		<plugins>
 			<plugin>
