feat: Add complete Docker and Docker Compose CI/CD integration
- Multi-stage Dockerfile for optimized Spring Boot image
- docker-compose.yml with MySQL, app, and Nexus services
- Updated application.properties for environment-based config
- Enhanced Jenkinsfile with Docker build and deploy stages
- Added health checks and container orchestration
- Comprehensive Docker deployment documentation
- Production-ready with security best practices

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,18 @@
 
-# DB Configuration :
-#spring.datasource.url=jdbc:mysql://localhost:3306/db?createDatabaseIfNotExist=true
-spring.datasource.url=jdbc:mysql://localhost:3306/db-school?createDatabaseIfNotExist=true
+# DB Configuration - Environment-based
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://localhost:3306/db-school?createDatabaseIfNotExist=true}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:root}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:}
+spring.datasource.driver-class-name=${SPRING_DATASOURCE_DRIVER_CLASS_NAME:com.mysql.cj.jdbc.Driver}
 
-spring.datasource.username=root
-spring.datasource.password=
-spring.jpa.show-sql=false
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=${SPRING_JPA_SHOW_SQL:false}
+spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HIBERNATE_DDL_AUTO:update}
 
-# Web Server (Tomcat) configuration :
-server.port=8089
-server.servlet.context-path=/school
+# Web Server (Tomcat) configuration
+server.port=${SERVER_PORT:8080}
+server.servlet.context-path=${SERVER_SERVLET_CONTEXT_PATH:/school}
+
+# Actuator for health checks
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.show-details=always
 
